@@ -14,6 +14,9 @@ Changes that could break older environments:
   "java -jar ant-bootstrap.jar" instead if you want to run Ant without
   the wrapper script (not recommended).
 
+* The <script> task now requires Apache BSF instead of the older IBM
+  version.  See <http://jakarta.apache.org/bsf/>
+
 Fixed bugs:
 -----------
 
